before starting work on new aural obj